{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 139,
  "lineage": "8c26c378-d640-2068-9b02-9b72c0d3d9cd",
  "resources": [
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-d-app-ap",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:route-table/rtb-0fbaaf7b3474cba2b",
            "id": "rtb-0fbaaf7b3474cba2b",
            "owner_id": "851725467479",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ww-an2-rtb-api-d-app-ap"
            },
            "tags_all": {
              "Application": "api",
              "Backup": "",
              "Creator": "",
              "Environment": "Dev",
              "Name": "ww-an2-rtb-api-d-app-ap",
              "Owner": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-02f4703ce3357f6c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-app-db",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:route-table/rtb-0dd5e1001d087c091",
            "id": "rtb-0dd5e1001d087c091",
            "owner_id": "851725467479",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ww-an2-rtb-api-d-app-db"
            },
            "tags_all": {
              "Application": "api",
              "Backup": "",
              "Creator": "",
              "Environment": "Dev",
              "Name": "ww-an2-rtb-api-d-app-db",
              "Owner": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-02f4703ce3357f6c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-app-lb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:route-table/rtb-0404ad8b062ca1054",
            "id": "rtb-0404ad8b062ca1054",
            "owner_id": "851725467479",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ww-an2-rtb-api-d-app-lb"
            },
            "tags_all": {
              "Application": "api",
              "Backup": "",
              "Creator": "",
              "Environment": "Dev",
              "Name": "ww-an2-rtb-api-d-app-lb",
              "Owner": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-02f4703ce3357f6c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-app-tgw",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:route-table/rtb-0b613f09f8777aa67",
            "id": "rtb-0b613f09f8777aa67",
            "owner_id": "851725467479",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ww-an2-rtb-api-d-app-tgw"
            },
            "tags_all": {
              "Application": "api",
              "Backup": "",
              "Creator": "",
              "Environment": "Dev",
              "Name": "ww-an2-rtb-api-d-app-tgw",
              "Owner": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-02f4703ce3357f6c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "drs_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ww-an2-sbn-api-d-app-ap-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0604fc35b2e1052ca",
            "route_table_id": "rtb-0fbaaf7b3474cba2b",
            "subnet_id": "subnet-03ca013ea8312b78a"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.default",
            "module.app_vpc.aws_subnet.default",
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ww-an2-sbn-api-d-app-ap-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e91d9c323287cc4",
            "route_table_id": "rtb-0fbaaf7b3474cba2b",
            "subnet_id": "subnet-0a2f885e97c469f65"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.default",
            "module.app_vpc.aws_subnet.default",
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ww-an2-sbn-api-d-app-db-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7825999a96e3f34",
            "route_table_id": "rtb-0dd5e1001d087c091",
            "subnet_id": "subnet-075506fc171791899"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.default",
            "module.app_vpc.aws_subnet.default",
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ww-an2-sbn-api-d-app-db-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0572e05e14e62648a",
            "route_table_id": "rtb-0dd5e1001d087c091",
            "subnet_id": "subnet-0284c015ba53f17ce"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.default",
            "module.app_vpc.aws_subnet.default",
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ww-an2-sbn-api-d-app-lb-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a912ced8ad6ef770",
            "route_table_id": "rtb-0404ad8b062ca1054",
            "subnet_id": "subnet-0090624bb1adf09c1"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.default",
            "module.app_vpc.aws_subnet.default",
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ww-an2-sbn-api-d-app-lb-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d0b2a0d9988a994",
            "route_table_id": "rtb-0404ad8b062ca1054",
            "subnet_id": "subnet-09f8498a80d0746a8"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.default",
            "module.app_vpc.aws_subnet.default",
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ww-an2-sbn-api-d-app-tgw-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6d80f2cdee79a54",
            "route_table_id": "rtb-0b613f09f8777aa67",
            "subnet_id": "subnet-0746e9cd882559333"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.default",
            "module.app_vpc.aws_subnet.default",
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ww-an2-sbn-api-d-app-tgw-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0149c0cde34882f85",
            "route_table_id": "rtb-0b613f09f8777aa67",
            "subnet_id": "subnet-007a799dd98b4def9"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.default",
            "module.app_vpc.aws_subnet.default",
            "module.app_vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-d-app-ap-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:subnet/subnet-03ca013ea8312b78a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.4.0.192/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ca013ea8312b78a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725467479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ww-an2-sbn-api-d-app-ap-2a"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-sbn-api-d-app-ap-2a"
            },
            "vpc_id": "vpc-02f4703ce3357f6c1"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-app-ap-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:subnet/subnet-0a2f885e97c469f65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.4.0.208/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2f885e97c469f65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725467479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ww-an2-sbn-api-d-app-ap-2c"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-sbn-api-d-app-ap-2c"
            },
            "vpc_id": "vpc-02f4703ce3357f6c1"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-app-db-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:subnet/subnet-075506fc171791899",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.4.0.224/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075506fc171791899",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725467479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ww-an2-sbn-api-d-app-db-2a"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-sbn-api-d-app-db-2a"
            },
            "vpc_id": "vpc-02f4703ce3357f6c1"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-app-db-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:subnet/subnet-0284c015ba53f17ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.4.0.240/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0284c015ba53f17ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725467479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ww-an2-sbn-api-d-app-db-2c"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-sbn-api-d-app-db-2c"
            },
            "vpc_id": "vpc-02f4703ce3357f6c1"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-app-lb-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:subnet/subnet-0090624bb1adf09c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.4.0.160/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0090624bb1adf09c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725467479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ww-an2-sbn-api-d-app-lb-2a"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-sbn-api-d-app-lb-2a"
            },
            "vpc_id": "vpc-02f4703ce3357f6c1"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-app-lb-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:subnet/subnet-09f8498a80d0746a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.4.0.176/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f8498a80d0746a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725467479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ww-an2-sbn-api-d-app-lb-2c"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-sbn-api-d-app-lb-2c"
            },
            "vpc_id": "vpc-02f4703ce3357f6c1"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-app-tgw-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:subnet/subnet-0746e9cd882559333",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.4.0.128/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0746e9cd882559333",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725467479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ww-an2-sbn-api-d-app-tgw-2a"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-sbn-api-d-app-tgw-2a"
            },
            "vpc_id": "vpc-02f4703ce3357f6c1"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-app-tgw-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:subnet/subnet-007a799dd98b4def9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.4.0.144/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007a799dd98b4def9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725467479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ww-an2-sbn-api-d-app-tgw-2c"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-sbn-api-d-app-tgw-2c"
            },
            "vpc_id": "vpc-02f4703ce3357f6c1"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:vpc/vpc-02f4703ce3357f6c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.128/25",
            "default_network_acl_id": "acl-013b2eff9d86b5278",
            "default_route_table_id": "rtb-025bc07ba997813ca",
            "default_security_group_id": "sg-002451bfa3a7fcd7b",
            "dhcp_options_id": "dopt-0984e7a5a66987eba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02f4703ce3357f6c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-025bc07ba997813ca",
            "owner_id": "851725467479",
            "tags": {
              "Name": "ww-an2-vpc-api-d-app-01"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-vpc-api-d-app-01"
            }
          }
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-d-dmz-lb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:route-table/rtb-079b8abd89fd00000",
            "id": "rtb-079b8abd89fd00000",
            "owner_id": "851725467479",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ww-an2-rtb-api-d-dmz-lb"
            },
            "tags_all": {
              "Application": "api",
              "Backup": "",
              "Creator": "",
              "Environment": "Dev",
              "Name": "ww-an2-rtb-api-d-dmz-lb",
              "Owner": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-01e2d193f53035b09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-dmz-tgw",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:route-table/rtb-05c8707cff8c1130e",
            "id": "rtb-05c8707cff8c1130e",
            "owner_id": "851725467479",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ww-an2-rtb-api-d-dmz-tgw"
            },
            "tags_all": {
              "Application": "api",
              "Backup": "",
              "Creator": "",
              "Environment": "Dev",
              "Name": "ww-an2-rtb-api-d-dmz-tgw",
              "Owner": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-01e2d193f53035b09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-dmz-wb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:route-table/rtb-0b5b2492d9af543bb",
            "id": "rtb-0b5b2492d9af543bb",
            "owner_id": "851725467479",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ww-an2-rtb-api-d-dmz-wb"
            },
            "tags_all": {
              "Application": "api",
              "Backup": "",
              "Creator": "",
              "Environment": "Dev",
              "Name": "ww-an2-rtb-api-d-dmz-wb",
              "Owner": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-01e2d193f53035b09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "drs_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ww-an2-sbn-api-d-dmz-lb-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a6c8a61cbeff7da",
            "route_table_id": "rtb-079b8abd89fd00000",
            "subnet_id": "subnet-01238f855dd03944f"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.default",
            "module.dmz_vpc.aws_subnet.default",
            "module.dmz_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ww-an2-sbn-api-d-dmz-lb-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013b0b0bfcd4be351",
            "route_table_id": "rtb-079b8abd89fd00000",
            "subnet_id": "subnet-00ab162b6ac92590a"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.default",
            "module.dmz_vpc.aws_subnet.default",
            "module.dmz_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ww-an2-sbn-api-d-dmz-tgw-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a384aa6aa2d8f08f",
            "route_table_id": "rtb-05c8707cff8c1130e",
            "subnet_id": "subnet-043eefde3e0c0339d"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.default",
            "module.dmz_vpc.aws_subnet.default",
            "module.dmz_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ww-an2-sbn-api-d-dmz-tgw-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ed7815088a866f7",
            "route_table_id": "rtb-05c8707cff8c1130e",
            "subnet_id": "subnet-0b6f41ff087c98f86"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.default",
            "module.dmz_vpc.aws_subnet.default",
            "module.dmz_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ww-an2-sbn-api-d-dmz-wb-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093a970636eed0669",
            "route_table_id": "rtb-0b5b2492d9af543bb",
            "subnet_id": "subnet-0934b921a5b96b30d"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.default",
            "module.dmz_vpc.aws_subnet.default",
            "module.dmz_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ww-an2-sbn-api-d-dmz-wb-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bf0e96170eb701c",
            "route_table_id": "rtb-0b5b2492d9af543bb",
            "subnet_id": "subnet-030b3864fc1b966bb"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.default",
            "module.dmz_vpc.aws_subnet.default",
            "module.dmz_vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-d-dmz-lb-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:subnet/subnet-01238f855dd03944f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.4.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01238f855dd03944f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725467479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ww-an2-sbn-api-d-dmz-lb-2a"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-sbn-api-d-dmz-lb-2a"
            },
            "vpc_id": "vpc-01e2d193f53035b09"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-dmz-lb-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:subnet/subnet-00ab162b6ac92590a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.4.0.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ab162b6ac92590a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725467479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ww-an2-sbn-api-d-dmz-lb-2c"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-sbn-api-d-dmz-lb-2c"
            },
            "vpc_id": "vpc-01e2d193f53035b09"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-dmz-tgw-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:subnet/subnet-043eefde3e0c0339d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.4.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043eefde3e0c0339d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725467479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ww-an2-sbn-api-d-dmz-tgw-2a"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-sbn-api-d-dmz-tgw-2a"
            },
            "vpc_id": "vpc-01e2d193f53035b09"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-dmz-tgw-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:subnet/subnet-0b6f41ff087c98f86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.4.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6f41ff087c98f86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725467479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ww-an2-sbn-api-d-dmz-tgw-2c"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-sbn-api-d-dmz-tgw-2c"
            },
            "vpc_id": "vpc-01e2d193f53035b09"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-dmz-wb-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:subnet/subnet-0934b921a5b96b30d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.4.0.96/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0934b921a5b96b30d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725467479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ww-an2-sbn-api-d-dmz-wb-2a"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-sbn-api-d-dmz-wb-2a"
            },
            "vpc_id": "vpc-01e2d193f53035b09"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "api-d-dmz-wb-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:subnet/subnet-030b3864fc1b966bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.4.0.112/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030b3864fc1b966bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725467479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ww-an2-sbn-api-d-dmz-wb-2c"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-sbn-api-d-dmz-wb-2c"
            },
            "vpc_id": "vpc-01e2d193f53035b09"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851725467479:vpc/vpc-01e2d193f53035b09",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/25",
            "default_network_acl_id": "acl-0497890a975b29123",
            "default_route_table_id": "rtb-035dbecde7dcf73e1",
            "default_security_group_id": "sg-0e56de98507508d42",
            "dhcp_options_id": "dopt-0984e7a5a66987eba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01e2d193f53035b09",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-035dbecde7dcf73e1",
            "owner_id": "851725467479",
            "tags": {
              "Name": "ww-an2-vpc-api-d-dmz-01"
            },
            "tags_all": {
              "Application": "api",
              "Environment": "Dev",
              "Name": "ww-an2-vpc-api-d-dmz-01"
            }
          }
        }
      ]
    }
  ]
}